--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,24 +38,23 @@ body {
 		font-family: $font-family_1;
 		font-weight: 600;
 		font-style: normal;
-		font-size: 18px;
 		line-height: 25px;
 		text-align: center;
 		color: $color_2;
 		background-color: $background-color_1;
-		padding: 5px;
 		display: grid;
 		justify-content: center;
 		h1 {
 			text-align: center;
 			font-size: 50px;
 			font-weight: 550;
-			padding: 20px 0px 10px 0px;
+			padding: 20px 0px 5px 0px;
 			font-family: $font-family_1;
 			background-color: $background-color_1;
 			margin-bottom: 0px;
 			a {
 				color: $color_1;
+				font-size: 60px;
 				padding: 13px;
 				&:hover {
 					animation: XEROX 1.1s;
@@ -86,6 +85,7 @@ body {
 							letter-spacing: 1px;
 							width: 155px;
 							a{
+								font-size: 20px;
 								&:hover {
 									transition-property: all;
 									transition-duration: 95ms;
@@ -219,10 +219,12 @@ a {
 @media screen and (min-width: 0px) and (max-width:1535px) {
 	body{
 		main{
-			form{
-				fieldset{
-					margin: 30px 0px 0px 200px;
-				}
+            div.contactoDiv{
+                form{
+                    fieldset{
+                        margin: 30px 0px 0px 200px;
+                    }
+                }
 			}
 		}
 	}
@@ -239,11 +241,11 @@ a {
 					margin: 30px 0px 0px 50px;
 					padding: 0px 0px 0px 120px;
 				}
-			}
-			form{
-				fieldset{
-					margin: 30px 0px 0px 150px;
-				}
+                form{
+                    fieldset{
+                        margin: 30px 0px 0px 150px;
+                    }
+                }
 			}
 		}
 	}
@@ -357,10 +359,12 @@ a {
 				div.carousel{
 					margin: 0px;
 					div.carousel-inner{
-						div{
-							p{
-								font-size: 20px;
-							}
+						div.carousel-item{
+                            div{
+                                p{
+                                    font-size: 20px;
+                                }
+                            }
 						}
 					}
 				}
