cambio en imagenes de banner

--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -28,7 +28,7 @@
 	background-image:linear-gradient(
         rgba(5, 7, 12, 0.5),
         rgba(5, 7, 12, 0.5)),
-        url(../img/0568794.webp);
+        url(../img/0568794.jpg);
 	background-size: auto;
 	background-position: 0% 30%
 }
