--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ main form fieldset div.enviar button {
 }
 
 .banner2 {
-  background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/0568794.webp);
+  background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/0568794.jpg);
   background-size: auto;
   background-position: 0% 30%;
 }
