--- a/css/style.css
+++ b/css/style.css
@@ -164,21 +164,21 @@ body header h1 a {
 body header h1 a:hover {
   animation: XEROX 1.1s;
 }
-body header nav.navbar div div.collapse ul {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 19px;
-  line-height: 25px;
+body header nav.navbar div div.collapse div.dropdown button.btn {
   background-color: rgb(91, 17, 141);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  flex-direction: row;
-  margin-bottom: 0px;
-  width: 1400px;
+  border: 0px;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 10px 0px 10px 30px;
+  margin: 0px;
 }
-body header nav.navbar div div.collapse ul li.xeroxLista {
+body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
+  background-color: rgb(91, 17, 141);
+  margin: 0px;
+  padding: 0px;
+}
+body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu li.xeroxLista1 {
   display: grid;
   list-style: none;
   padding: 10px 0px 10px 0px;
@@ -186,15 +186,53 @@ body header nav.navbar div div.collapse ul li.xeroxLista {
   letter-spacing: 1px;
   width: 155px;
 }
-body header nav.navbar div div.collapse ul li.xeroxLista a {
+body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu li.xeroxLista1 a {
+  font-size: 15px;
+  color: azure;
+}
+body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu li.xeroxLista1 a:hover {
+  transition-property: all;
+  transition-duration: 95ms;
+  transform: scale(1.2);
+  color: black;
+}
+body header nav.navbar div div.collapse ul.navbar-nav {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 19px;
+  line-height: 25px;
+  background-color: rgb(91, 17, 141);
+  margin-bottom: 0px;
+  width: 180px;
+  align-items: center;
+}
+body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista {
+  display: grid;
+  list-style: none;
+  padding: 10px 0px 10px 0px;
+  text-decoration: none;
+  letter-spacing: 1px;
+  width: 155px;
+}
+body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista a {
   font-size: 20px;
 }
-body header nav.navbar div div.collapse ul li.xeroxLista a:hover {
+body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista a:hover {
   transition-property: all;
   transition-duration: 95ms;
   transform: scale(1.5);
 }
-body header nav.navbar div div.collapsing ul {
+body header nav.navbar div div.collapsing div.dropdown button.btn {
+  background-color: rgb(91, 17, 141);
+  border: 0px;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 10px 0px 10px 30px;
+  margin: 0px;
+}
+body header nav.navbar div div.collapsing ul.navbar-nav {
   font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -207,7 +245,7 @@ body header nav.navbar div div.collapsing ul {
   margin-bottom: 0px;
   align-items: flex-start;
 }
-body header nav.navbar div div.collapsing ul li.xeroxLista {
+body header nav.navbar div div.collapsing ul.navbar-nav li.xeroxLista {
   display: inline-block;
   list-style: none;
   padding: 10px 0px 10px 0px;
@@ -218,10 +256,10 @@ body header nav.navbar div div.collapsing ul li.xeroxLista {
   width: 155px;
   display: flex;
 }
-body header nav.navbar div div.collapsing ul li.xeroxLista a {
+body header nav.navbar div div.collapsing ul.navbar-nav li.xeroxLista a {
   font-size: 20px;
 }
-body header nav.navbar div div.collapsing ul li.xeroxLista a:hover {
+body header nav.navbar div div.collapsing ul.navbar-nav li.xeroxLista a:hover {
   transition-property: all;
   transition-duration: 95ms;
   transform: scale(1.5);
@@ -326,13 +364,25 @@ a {
   }
 }
 @media screen and (max-width: 1250px) {
-  body header nav.navbar div div.collapse ul {
-    width: 1100px;
+  body header nav.navbar div div.collapse div.dropdown button.btn {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse ul.navbar-nav {
+    width: 180px;
   }
 }
 @media screen and (max-width: 1050px) {
-  body header nav.navbar div div.collapse ul {
-    width: 900px;
+  body header nav.navbar div div.collapse div.dropdown button.btn {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse ul.navbar-nav {
+    width: 180px;
   }
   body main section.sectionMain div.carousel {
     margin: 0px 100px 0px 100px;
@@ -350,19 +400,32 @@ a {
   body header nav.navbar div button {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     margin-bottom: 10px;
   }
-  body header nav.navbar div div.collapse ul {
+  body header nav.navbar div div.collapse div.dropdown button.btn {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapse ul.navbar-nav {
     display: grid;
     justify-content: start;
   }
-  body header nav.navbar div div.collapse ul li.xeroxLista {
+  body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista {
     display: grid;
     justify-content: start;
     padding-left: 30px;
     width: 200px;
   }
-  body header nav.navbar div div.collapsing ul li.xeroxLista {
+  body header nav.navbar div div.collapsing div.dropdown button.btn {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapsing div.dropdown ul.dropdown-menu {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div div.collapsing ul.navbar-nav li.xeroxLista {
     justify-content: flex-start;
     padding-left: 30px;
     width: 200px;
@@ -386,12 +449,22 @@ a {
   }
 }
 @media screen and (min-width: 910px) {
-  body header nav.navbar div button {
+  body header nav.navbar div button.navbar-toggler {
     display: none;
   }
   body header nav.navbar div.collapse {
     display: flex !important;
     flex-basis: auto;
+    align-items: center;
+  }
+  body header nav.navbar div.collapse div.dropdown {
+    border-style: none;
+  }
+  body header nav.navbar div.collapse div.dropdown button.btn {
+    background-color: rgb(91, 17, 141);
+  }
+  body header nav.navbar div.collapse div.dropdown ul.dropdown-menu {
+    background-color: rgb(91, 17, 141);
   }
 }
 @media screen and (min-width: 0px) and (max-width: 576px) {
