--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,19 +64,50 @@ body {
 		nav.navbar{
 			div{
 				div.collapse{
-					ul {
+					div.dropdown{
+						button.btn{
+							background-color: $background-color_1;
+							border: 0px;
+							font-size: 20px;
+							font-weight: 600;
+							letter-spacing: 1px;
+							padding: 10px 0px 10px 30px;
+							margin: 0px;
+						}
+						ul.dropdown-menu{
+							background-color: $background-color_1;
+							margin: 0px;
+							padding: 0px;
+							li.xeroxLista1{
+								display: grid;
+								list-style: none;
+								padding: 10px 0px 10px 0px;
+								text-decoration: none;
+								letter-spacing: 1px;
+								width: 155px;
+								a{
+									font-size: 15px;
+									color: azure;
+									&:hover {
+										transition-property: all;
+										transition-duration: 95ms;
+										transform: scale(1.2);
+										color: black;
+									}
+								}
+							}
+						}
+					}
+					ul.navbar-nav {
 						font-family: $font-family_1;
 						font-weight: 600;
 						font-style: normal;
 						font-size: 19px;
 						line-height: 25px;
 						background-color: $background-color_1;
-						display: flex;
-						flex-wrap: wrap;
-						justify-content: space-evenly;
-						flex-direction: row;
 						margin-bottom: 0px;
-						width: 1400px;
+						width: 180px;
+						align-items: center;
 						li.xeroxLista {
 							display: grid;
 							list-style: none;
@@ -96,7 +127,18 @@ body {
 					}
 				}
 				div.collapsing{
-					ul {
+					div.dropdown{
+						button.btn{
+							background-color: $background-color_1;
+							border: 0px;
+							font-size: 20px;
+							font-weight: 600;
+							letter-spacing: 1px;
+							padding: 10px 0px 10px 30px;
+							margin: 0px;
+						}
+					}
+					ul.navbar-nav {
 						font-family: $font-family_1;
 						font-weight: 600;
 						font-style: normal;
@@ -266,8 +308,16 @@ a {
 			nav.navbar{
 				div{
 					div.collapse{
-						ul{
-							width: 1100px;
+						div.dropdown{
+							button.btn{
+								background-color: $background-color_1;
+							}
+							ul.dropdown-menu{
+								background-color: $background-color_1;
+							}
+						}
+						ul.navbar-nav{
+							width: 180px;
 						}
 					}
 				}
@@ -281,8 +331,16 @@ a {
 			nav.navbar{
 				div{
 					div.collapse{
-						ul{
-							width: 900px;
+						div.dropdown{
+							button.btn{
+								background-color: $background-color_1;
+							}
+							ul.dropdown-menu{
+								background-color: $background-color_1;
+							}
+						}
+						ul.navbar-nav{
+							width: 180px;
 						}
 					}
 				}
@@ -315,10 +373,20 @@ a {
 					button{
 						display: flex;
 						justify-content: flex-start;
+						align-items: center;
 						margin-bottom: 10px;
 					}
 					div.collapse{
-						ul{
+						
+						div.dropdown{
+							button.btn{
+								background-color: $background-color_1;
+							}
+							ul.dropdown-menu{
+								background-color: $background-color_1;
+							}
+						}
+						ul.navbar-nav{
 							display: grid;
 							justify-content: start;
 							li.xeroxLista{
@@ -330,7 +398,15 @@ a {
 						}
 					}
 					div.collapsing{
-						ul{
+						div.dropdown{
+							button.btn{
+								background-color: $background-color_1;
+							}
+							ul.dropdown-menu{
+								background-color: $background-color_1;
+							}
+						}
+						ul.navbar-nav{
 							li.xeroxLista{
 								justify-content: flex-start;
 								padding-left: 30px;
@@ -373,13 +449,23 @@ a {
 		header{
 			nav.navbar{
 				div{
-					button{
+					button.navbar-toggler{
 						display: none;
 					}
 				}
 				div.collapse{
 					display: flex!important;
 					flex-basis:auto;
+					align-items: center;
+					div.dropdown{
+						border-style: none;
+						button.btn{
+							background-color: $background-color_1;
+						}
+						ul.dropdown-menu{
+							background-color: $background-color_1;
+						}
+					}
 				}
 			}
 		}
