--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,20 +78,26 @@ body {
 							background-color: $background-color_1;
 							margin: 0px;
 							padding: 0px;
+							--bs-dropdown-min-width: 0rem;
 							li.xeroxLista1{
 								display: grid;
 								list-style: none;
-								padding: 10px 0px 10px 0px;
+								padding: 5px 0px 5px 0px;
+								margin: 0px;
 								text-decoration: none;
 								letter-spacing: 1px;
 								width: 155px;
+								&:hover{
+									transition-property: all;
+									transition-duration: 95ms;
+									background-color: $background-color_2;
+								}
 								a{
 									font-size: 15px;
 									color: azure;
 									&:hover {
 										transition-property: all;
 										transition-duration: 95ms;
-										transform: scale(1.2);
 										color: black;
 									}
 								}
@@ -136,6 +142,11 @@ body {
 							letter-spacing: 1px;
 							padding: 10px 0px 10px 30px;
 							margin: 0px;
+						}
+						ul.dropdown-menu{
+							li.xeroxLista1{
+								margin: 0px;
+							}
 						}
 					}
 					ul.navbar-nav {
