--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,8 +205,13 @@ body {
 						img{
 							height: 550px;
 						}
-						div.carousel.caption{
+						div{
 							h5{
+								color: azure;
+							}
+							p{
+								font-size: 50px;
+								font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 								color: azure;
 							}
 						}
@@ -217,6 +222,13 @@ body {
 				margin: 30px 30px 0px 30px;
 				font-family: $font-family_1;
 				font-weight: 700;
+			}
+			section{
+				p{
+					font-size: 50px;
+					font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+					color: azure;
+				}
 			}
 			ul.row{
 				padding-left: 0rem;
@@ -265,11 +277,6 @@ nav {
 	}
 }
 
-p{
-	font-size: 50px;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	color: azure;
-}
 a {
 	list-style-type: none;
 	text-decoration: none;
@@ -388,7 +395,6 @@ a {
 						margin-bottom: 10px;
 					}
 					div.collapse{
-						
 						div.dropdown{
 							button.btn{
 								background-color: $background-color_1;
@@ -438,6 +444,11 @@ a {
 							img{
 								height: 300px;
 							}
+							div{
+								p{
+									font-size: 25px;
+								}
+							}
 						}
 					}
 				}
@@ -445,11 +456,13 @@ a {
 					margin-top: 20px;
 					padding: 10px 0px 0px 0px;
 				}
+				section{
+					p{
+						font-size: 25px;
+					}
+				}
 			}
 		}
-	}
-	p{
-		font-size: 25px;
 	}
 	h5{
 		font-size: 15px;
