--- a/css/style.css
+++ b/css/style.css
@@ -305,31 +305,53 @@ body main section.sectionMain h2 {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
 }
+body main section.sectionMain div.lista {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 0px 20px 0px 20px;
+}
+body main section.sectionMain div.lista div.card {
+  margin: 20px 30px 20px 30px;
+}
+body main section.sectionMain div.lista div.card:hover {
+  transform: scale(1.05);
+  transition-property: all;
+  transition-duration: 95ms;
+  background-color: rgb(91, 17, 141);
+}
+body main section.sectionMain div.lista div.card:hover p {
+  color: azure;
+}
+body main section.sectionMain div.lista div.card:hover h5 {
+  color: azure;
+}
+body main section.sectionMain div.lista div.card:hover button a {
+  color: azure;
+}
+body main section.sectionMain div.lista div.card img {
+  height: 450px;
+  width: 286px;
+}
+body main section.sectionMain div.lista div.card div.card-body p {
+  margin-bottom: 20px;
+}
+body main section.sectionMain div.lista div.card div.card-body button {
+  display: flex;
+  margin-left: 95px;
+  border-width: 0;
+}
+body main section.sectionMain div.lista div.card div.card-body button:hover {
+  background-color: azure;
+  color: azure;
+}
+body main section.sectionMain div.lista div.card div.card-body button a {
+  color: black;
+}
 body main section.sectionMain section p {
   font-size: 50px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: azure;
-}
-body main section.sectionMain ul.row {
-  padding-left: 0rem;
-}
-body main section.sectionMain ul.row li img {
-  height: 300px;
-  width: 200px;
-  transition-duration: 95ms;
-}
-body main section.sectionMain ul.row li img:hover {
-  transform: scale(1.2);
-}
-body main section.sectionMain ul.row li h3 {
-  margin: 30px 30px 0px 30px;
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 700;
-  font-size: 17px;
-}
-body main section.sectionMain ul.row li h4 {
-  text-transform: uppercase;
-  font-weight: 700;
 }
 
 nav ul {
@@ -500,6 +522,14 @@ a {
   }
   body main div.contactoDiv form fieldset {
     margin: 30px 0px 0px 90px;
+  }
+}
+@media screen and (max-width: 400px) {
+  body main section.sectionMain div.lista {
+    margin: 0px;
+  }
+  body main section.sectionMain div.lista div.card {
+    margin: 20px 0px 10px 0px;
   }
 }
 
