--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -32,11 +32,11 @@ main {
 	form{
 		fieldset{
 			margin: 30px 0px 0px 500px;
-			border: 0ch;
 			display: grid;
 			font-family: 'Ubuntu', sans-serif;
 			font-weight: 550;
 			div.contactoDiv{
+				--bs-border-color: rgb(91, 17, 141);
 				label.comentario.Display{
 					display: flex;
 				}
