--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ main div.contactoDiv ul li a {
 }
 main div.contactoDiv ul li img {
   width: 25px;
+  height: 25px;
   margin: 0px 15px;
 }
 main form fieldset {
