--- a/scss/style.scss
+++ b/scss/style.scss
@@ -271,6 +271,15 @@ body {
 					}
 				}
 			}
+			section.banner, .banner1, .banner2, .banner3{
+				p{
+					color: azure;
+					font-family: $font-family_1;
+					font-size: 40px;
+					font-weight: 600;
+					letter-spacing: 1px;
+				}
+			}
 		}
 	}
 }
@@ -473,6 +482,11 @@ a {
 				h2{
 					margin-top: 20px;
 					padding: 10px 0px 0px 0px;
+				}
+				section.banner, .banner1, .banner2, .banner3{
+					p{
+						font-size: 30px;
+					}
 				}
 			}
 		}
