--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import "contacto", "banner", "listasProductos", "footer";
+@import "contacto", "banner", "listasProductos", "footer", "novedades";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
 $color_1: azure;
@@ -65,6 +65,7 @@ body {
 			div{
 				div.collapse{
 					div.dropdown{
+						margin-right: 20px;
 						button.btn{
 							background-color: $background-color_1;
 							border: 0px;
@@ -112,8 +113,8 @@ body {
 						line-height: 25px;
 						background-color: $background-color_1;
 						margin-bottom: 0px;
-						width: 180px;
 						align-items: center;
+						flex-direction: row;
 						li.xeroxLista {
 							display: grid;
 							list-style: none;
@@ -228,8 +229,8 @@ body {
 				flex-wrap: wrap;
 				justify-content: space-evenly;
 				margin: 0px 20px 0px 20px;
-				div.card{
-					margin: 20px 30px 20px 30px;
+				div.divLista{
+					margin: 20px 30px 40px 30px;
 					&:hover{
 						transform: scale(1.05);
 						transition-property: all;
@@ -261,7 +262,6 @@ body {
 							text-transform: capitalize;
 						}
 						p{
-							margin-bottom: 20px;
 							font-size: 15px;
 						}
 						a.btn{
@@ -284,16 +284,10 @@ body {
 								}
 							}
 						}
+						div.carDiv{
+							margin: 20px 30px 0px 30px;
+						}
 					}
-				}
-			}
-			section.banner, .banner1, .banner2, .banner3{
-				p{
-					color: azure;
-					font-family: $font-family_1;
-					font-size: 40px;
-					font-weight: 600;
-					letter-spacing: 1px;
 				}
 			}
 		}
@@ -377,9 +371,6 @@ a {
 								background-color: $background-color_1;
 							}
 						}
-						ul.navbar-nav{
-							width: 180px;
-						}
 					}
 				}
 			}
@@ -399,9 +390,6 @@ a {
 							ul.dropdown-menu{
 								background-color: $background-color_1;
 							}
-						}
-						ul.navbar-nav{
-							width: 180px;
 						}
 					}
 				}
@@ -577,7 +565,7 @@ a {
 				div.lista{
 					margin: 0px;
 					div.card{
-						margin: 20px 0px 10px 0px;
+						margin: 20px 0px 30px 0px;
 					}
 				}
 			}
