--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,14 @@ main form fieldset div.enviar button {
   background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/YuGiOh.jpg);
 }
 
+section.banner p, .banner1 p, .banner2 p, .banner3 p {
+  color: azure;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
 .imagenLista {
   margin: 30px 30px 30px 30px;
   display: inline-block;
@@ -107,6 +115,10 @@ footer {
   flex-direction: column;
 }
 footer a.footerRedes {
+  width: 30px;
+  height: 30px;
+}
+footer a.footerRedes img {
   width: 30px;
   height: 30px;
 }
@@ -167,6 +179,9 @@ body header h1 a {
 body header h1 a:hover {
   animation: XEROX 1.1s;
 }
+body header nav.navbar div div.collapse div.dropdown {
+  margin-right: 20px;
+}
 body header nav.navbar div div.collapse div.dropdown button.btn {
   background-color: rgb(91, 17, 141);
   border: 0px;
@@ -213,8 +228,8 @@ body header nav.navbar div div.collapse ul.navbar-nav {
   line-height: 25px;
   background-color: rgb(91, 17, 141);
   margin-bottom: 0px;
-  width: 180px;
   align-items: center;
+  flex-direction: row;
 }
 body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista {
   display: grid;
@@ -314,66 +329,61 @@ body main section.sectionMain div.lista {
   justify-content: space-evenly;
   margin: 0px 20px 0px 20px;
 }
-body main section.sectionMain div.lista div.card {
-  margin: 20px 30px 20px 30px;
+body main section.sectionMain div.lista div.divLista {
+  margin: 20px 30px 40px 30px;
 }
-body main section.sectionMain div.lista div.card:hover {
+body main section.sectionMain div.lista div.divLista:hover {
   transform: scale(1.05);
   transition-property: all;
   transition-duration: 95ms;
   background-color: rgb(91, 17, 141);
 }
-body main section.sectionMain div.lista div.card:hover h5 {
+body main section.sectionMain div.lista div.divLista:hover h5 {
   color: azure;
 }
-body main section.sectionMain div.lista div.card:hover a {
+body main section.sectionMain div.lista div.divLista:hover a {
   color: azure;
 }
-body main section.sectionMain div.lista div.card:hover div.collapse div.card {
+body main section.sectionMain div.lista div.divLista:hover div.collapse div.card {
   background-color: azure;
   transform: none;
 }
-body main section.sectionMain div.lista div.card:hover div.collapse div.card p {
+body main section.sectionMain div.lista div.divLista:hover div.collapse div.card p {
   background-color: azure;
   transform: none;
 }
-body main section.sectionMain div.lista div.card img {
+body main section.sectionMain div.lista div.divLista img {
   height: 450px;
   width: 286px;
 }
-body main section.sectionMain div.lista div.card div.card-body h5 {
+body main section.sectionMain div.lista div.divLista div.card-body h5 {
   text-transform: capitalize;
 }
-body main section.sectionMain div.lista div.card div.card-body p {
-  margin-bottom: 20px;
+body main section.sectionMain div.lista div.divLista div.card-body p {
   font-size: 15px;
 }
-body main section.sectionMain div.lista div.card div.card-body a.btn {
+body main section.sectionMain div.lista div.divLista div.card-body a.btn {
   background-color: rgb(91, 17, 141);
   border: 0;
 }
-body main section.sectionMain div.lista div.card div.card-body a.btn:hover {
+body main section.sectionMain div.lista div.divLista div.card-body a.btn:hover {
   background-color: azure;
   color: black;
 }
-body main section.sectionMain div.lista div.card div.card-body button.btn-outline-primary {
+body main section.sectionMain div.lista div.divLista div.card-body button.btn-outline-primary {
   display: flex;
   margin-left: 95px;
   border-width: 0;
 }
-body main section.sectionMain div.lista div.card div.card-body button.btn-outline-primary:hover {
+body main section.sectionMain div.lista div.divLista div.card-body button.btn-outline-primary:hover {
   background-color: azure;
   color: azure;
 }
-body main section.sectionMain div.lista div.card div.card-body button.btn-outline-primary:hover a {
+body main section.sectionMain div.lista div.divLista div.card-body button.btn-outline-primary:hover a {
   color: black;
 }
-body main section.sectionMain section.banner p, body main section.sectionMain .banner1 p, body main section.sectionMain .banner2 p, body main section.sectionMain .banner3 p {
-  color: azure;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: 1px;
+body main section.sectionMain div.lista div.divLista div.card-body div.carDiv {
+  margin: 20px 30px 0px 30px;
 }
 
 nav ul {
@@ -427,9 +437,6 @@ a {
   body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
     background-color: rgb(91, 17, 141);
   }
-  body header nav.navbar div div.collapse ul.navbar-nav {
-    width: 180px;
-  }
 }
 @media screen and (max-width: 1050px) {
   body header nav.navbar div div.collapse div.dropdown button.btn {
@@ -437,9 +444,6 @@ a {
   }
   body header nav.navbar div div.collapse div.dropdown ul.dropdown-menu {
     background-color: rgb(91, 17, 141);
-  }
-  body header nav.navbar div div.collapse ul.navbar-nav {
-    width: 180px;
   }
   body main section.sectionMain div.carousel {
     margin: 0px 100px 0px 100px;
@@ -548,7 +552,7 @@ a {
     margin: 0px;
   }
   body main section.sectionMain div.lista div.card {
-    margin: 20px 0px 10px 0px;
+    margin: 20px 0px 30px 0px;
   }
 }
 
