--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,10 @@ footer {
     a.footerRedes {
         width: 30px;
         height: 30px;
+        img{
+            width: 30px;
+            height: 30px;
+        }
     }
 }
 
