--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ main form fieldset div.enviar button {
   border-color: black;
 }
 
-.banner, .banner3, .banner2, .banner1 {
+.banner, .banner4, .banner3, .banner2, .banner1 {
   padding: 4rem 0rem;
   display: flex;
   flex-direction: column;
@@ -80,29 +80,16 @@ main form fieldset div.enviar button {
   background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/YuGiOh.jpg);
 }
 
-section.banner p, .banner1 p, .banner2 p, .banner3 p {
+.banner4 {
+  background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/YuGiOh.jpg);
+}
+
+section.banner p, .banner1 p, .banner2 p, .banner3 p, .banner4 p {
   color: azure;
   font-family: "Ubuntu", sans-serif;
   font-size: 40px;
   font-weight: 600;
   letter-spacing: 1px;
-}
-
-.imagenLista {
-  margin: 30px 30px 30px 30px;
-  display: inline-block;
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 600;
-  text-align: center;
-  font-size: 14px;
-  display: grid;
-  justify-items: center;
-  text-transform: uppercase;
-  justify-content: center;
-}
-.imagenLista .imagenCartas {
-  height: 250px;
-  width: 250px;
 }
 
 footer {
@@ -121,6 +108,37 @@ footer a.footerRedes {
 footer a.footerRedes img {
   width: 30px;
   height: 30px;
+}
+
+div.lista1 {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 3fr;
+  margin: 0px 20px 0px 20px;
+}
+div.lista1 div.divLista {
+  margin: 20px 30px 40px 30px;
+  display: flex;
+  flex-direction: row;
+}
+div.lista1 div.divLista img {
+  height: 450px;
+  width: 286px;
+}
+div.lista1 div.cartaLista img {
+  height: 300px;
+  width: 300px;
+}
+div.lista1 div.text-center {
+  border: 0;
+}
+div.lista1 div.text-center div.card-body p {
+  font-size: 20px;
+  margin-top: 15px;
+}
+div.lista1 div.text-center div.card-body a {
+  background-color: rgb(91, 17, 141);
+  border: 0;
 }
 
 @keyframes XEROX {
@@ -150,6 +168,7 @@ footer a.footerRedes img {
 
 body {
   background-color: azure;
+  font-family: "Ubuntu";
 }
 body header {
   font-family: "Ubuntu", sans-serif;
@@ -356,8 +375,14 @@ body main section.sectionMain div.lista div.divLista img {
   height: 450px;
   width: 286px;
 }
+body main section.sectionMain div.lista div.divLista div.card-body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 body main section.sectionMain div.lista div.divLista div.card-body h5 {
-  text-transform: capitalize;
+  font-size: 1.2rem;
 }
 body main section.sectionMain div.lista div.divLista div.card-body p {
   font-size: 15px;
@@ -372,7 +397,6 @@ body main section.sectionMain div.lista div.divLista div.card-body a.btn:hover {
 }
 body main section.sectionMain div.lista div.divLista div.card-body button.btn-outline-primary {
   display: flex;
-  margin-left: 95px;
   border-width: 0;
 }
 body main section.sectionMain div.lista div.divLista div.card-body button.btn-outline-primary:hover {
@@ -384,6 +408,10 @@ body main section.sectionMain div.lista div.divLista div.card-body button.btn-ou
 }
 body main section.sectionMain div.lista div.divLista div.card-body div.carDiv {
   margin: 20px 30px 0px 30px;
+}
+body main section.sectionMain div.lista div.cartaLista img {
+  height: 300px;
+  width: 286px;
 }
 
 nav ul {
@@ -505,8 +533,15 @@ a {
     margin-top: 20px;
     padding: 10px 0px 0px 0px;
   }
-  body main section.sectionMain section.banner p, body main section.sectionMain .banner1 p, body main section.sectionMain .banner2 p, body main section.sectionMain .banner3 p {
+  body main section.sectionMain section.banner p, body main section.sectionMain section.banner4 p, body main section.sectionMain .banner1 p, body main section.sectionMain .banner2 p, body main section.sectionMain .banner3 p {
     font-size: 30px;
+  }
+  body main section.sectionMain div.lista1 {
+    display: flex;
+    flex-direction: column;
+  }
+  body main section.sectionMain div.lista1 div.divLista {
+    margin: 20px 30px 0px 30px;
   }
 }
 @media screen and (min-width: 910px) {
