cambio de banner en novedades

--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -44,7 +44,9 @@
 	background-image:linear-gradient(
         rgba(5, 7, 12, 0.5),
         rgba(5, 7, 12, 0.5)),
-        url(../img/YuGiOh.jpg);
+        url(../img/banner-with-text-what-s-new-for-poster-design-web-advertisement-banner-on-yellow-background-and-memphis-style-vector.jpg);
+        background-size: 350px;
+        background-position: 40% 7%;
 }
 section.banner, .banner1, .banner2, .banner3, .banner4{
         p{
