--- a/scss/_novedades.scss
+++ b/scss/_novedades.scss
@@ -3,8 +3,9 @@ div.lista1{
     align-items: center;
     grid-template-columns: 1fr 3fr;
     margin: 0px 20px 0px 20px;
+    
     div.divLista{
-        margin: 20px 30px 40px 30px;
+        margin: 20px 0px 40px 30px;
         display: flex;
         flex-direction: row;
         img{
@@ -20,6 +21,7 @@ div.lista1{
     }
     div.text-center{
         border: 0;
+        background-color: azure;
         div.card-body{
             p{
                 font-size: 20px;
