--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ main form fieldset div.enviar button {
 }
 
 .banner4 {
-  background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/banner-with-text-what-s-new-for-poster-design-web-advertisement-banner-on-yellow-background-and-memphis-style-vector.jpg);
+  background-image: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)), url(../img/banner-with-text-what-s-new-for-poster-design-web-advertisement-banner-on-yellow-background-and-memp.avif);
   background-size: 350px;
   background-position: 40% 7%;
 }
