--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -44,7 +44,7 @@
 	background-image:linear-gradient(
         rgba(5, 7, 12, 0.5),
         rgba(5, 7, 12, 0.5)),
-        url(../img/banner-with-text-what-s-new-for-poster-design-web-advertisement-banner-on-yellow-background-and-memphis-style-vector.jpg);
+        url(../img/banner-with-text-what-s-new-for-poster-design-web-advertisement-banner-on-yellow-background-and-memp.avif);
         background-size: 350px;
         background-position: 40% 7%;
 }
