--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -9,7 +9,7 @@
         background-image:linear-gradient(
                 rgba(5, 7, 12, 0.5),
                 rgba(5, 7, 12, 0.5)),
-                url(../img/marvel-banner.jpg);
+                url(../img/aso3e-zwyuf.avif);
         background-position: 50% 50%;
         background-size: cover;
         background-attachment: fixed;
@@ -37,7 +37,7 @@
 	background-image:linear-gradient(
         rgba(5, 7, 12, 0.5),
         rgba(5, 7, 12, 0.5)),
-        url(../img/YuGiOh.jpg);
+        url(../img/a0z7l-grlfm.avif);
 }
 .banner4{
         @extend .banner;
