--- a/css/style.css
+++ b/css/style.css
@@ -366,11 +366,11 @@ body main section.sectionMain div.lista div.divLista:hover a {
   color: azure;
 }
 body main section.sectionMain div.lista div.divLista:hover div.collapse div.card {
-  background-color: azure;
+  background-color: white;
   transform: none;
 }
 body main section.sectionMain div.lista div.divLista:hover div.collapse div.card p {
-  background-color: azure;
+  background-color: white;
   transform: none;
 }
 body main section.sectionMain div.lista div.divLista img {
@@ -410,6 +410,7 @@ body main section.sectionMain div.lista div.divLista div.card-body button.btn-ou
 }
 body main section.sectionMain div.lista div.divLista div.card-body div.carDiv {
   margin: 20px 30px 0px 30px;
+  background-color: white;
 }
 body main section.sectionMain div.lista div.cartaLista img {
   height: 300px;
