--- a/scss/style.scss
+++ b/scss/style.scss
@@ -244,10 +244,10 @@ body {
 						}
 						div.collapse{
 							div.card{
-								background-color: azure;
+								background-color: white;
 								transform: none;
 								p{
-									background-color: azure;
+									background-color: white;
 									transform: none;
 								}
 							}
@@ -289,6 +289,7 @@ body {
 						}
 						div.carDiv{
 							margin: 20px 30px 0px 30px;
+							background-color: white;
 						}
 					}
 				}
