--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     font-family: 'Ubuntu', sans-serif;
     margin-top: 60px;
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
     color: azure;
     background-color: rgb(96, 102, 102);
     display: flex;
@@ -13,6 +13,11 @@ footer {
             width: 30px;
             height: 30px;
         }
+    }
+    p{
+        display: flex;
+        justify-content: center;
+        margin: 0;
     }
 }
 
