--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,10 @@ body header h1 a {
 body header h1 a:hover {
   animation: XEROX 1.1s;
 }
+body header nav.navbar div form button {
+  color: black;
+  background-color: azure;
+}
 body header nav.navbar div div.collapse div.dropdown {
   margin-right: 20px;
 }
@@ -442,6 +446,16 @@ a {
 .row {
   justify-content: space-evenly;
   box-sizing: content-box;
+}
+
+.imgJs {
+  height: 250px;
+  width: 175px;
+  margin-top: 30px;
+}
+
+.textJs {
+  color: white;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1535px) {
