--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,6 +64,16 @@ body {
 		}
 		nav.navbar{
 			div{
+				form{
+					button{
+						color: black;
+						background-color: $background-color_2;
+					}
+				}
+			}
+		}
+		nav.navbar{
+			div{
 				div.collapse{
 					div.dropdown{
 						margin-right: 20px;
@@ -331,6 +341,14 @@ a {
 .row {
 	justify-content: space-evenly;
 	box-sizing: content-box;
+}
+.imgJs{
+	height: 250px;
+	width: 175px;
+	margin-top: 30px;
+}
+.textJs{
+	color: white;
 }
 
 @media screen and (min-width: 0px) and (max-width:1535px) {
